--- a/panier.html
+++ b/panier.html
@@ -33,7 +33,7 @@
 
 <!-- ===== PAIEMENT PAYPAL ===== -->
 <div class="cart-actions" style="margin-top:30px; text-align:center;">
-  <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+  <form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
 
     <!-- CONFIG PAYPAL -->
     <input type="hidden" name="cmd" value="_xclick">
