--- a/panier.html
+++ b/panier.html
@@ -37,7 +37,7 @@
 
     <!-- CONFIG PAYPAL -->
     <input type="hidden" name="cmd" value="_xclick">
-    <input type="hidden" name="business" value="esiptvmaxoff@gmail.com">
+    <input type="hidden" name="business" value="sb-j43ukj48353422@business.example.com">
     <input type="hidden" name="item_name" value="Commande EsipTvMax">
     <input type="hidden" name="currency_code" value="EUR">
 
